--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.3.2",
     "resolve": "1.6.0",
+    "silvermine-videojs-quality-selector": "^1.1.2",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
@@ -43,6 +44,7 @@
     "videojs-contrib-hls": "^5.14.1",
     "videojs-contrib-quality-levels": "^2.0.4",
     "videojs-flash": "^2.1.0",
+    "videojs-resolution-switcher": "^0.4.2",
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2",
